# Secular-Origin

./: .gitignore  README.md  opencluster.py  pyproject.toml  requirements.txt  secular-origin.ipynb
figures/: paper.mplstyle
src/pal/: __init__.py  secular.py
